--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Provides access to Soft PWM on the Raspberry Pi as part of the Raspi.js library suite",
   "main": "lib/index.js",
   "dependencies": {
-    "raspi-peripheral": "1.3.0"
+    "raspi-peripheral": "1.3.0",
+    "pigpio": "^0.3.2"
   },
   "devDependencies": {
     "del": "^2.0.2",
