Install pigpio automatically. Polish README.md and CHANGELOG.md

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "gulp-watch": "^4.3.5"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "preinstall": "sh install-pigpio.sh"
   },
   "repository": {
     "type": "git",
